--- a/Ubiquitous2/View/MainWindow.xaml
+++ b/Ubiquitous2/View/MainWindow.xaml
@@ -9,8 +9,8 @@
         x:Class="UB.MainWindow"        
         mc:Ignorable="d ignore"
         UseLayoutRounding="True"
-        Height="{Binding Source={x:Static Settings:Ubiqiutous.Default}, Path=MainWindowHeight,Mode=TwoWay}"
-        Width="{Binding Source={x:Static Settings:Ubiqiutous.Default}, Path=MainWindowWidth,Mode=TwoWay}"
+        Height="{Binding Source={x:Static Settings:Ubiquitous.Default}, Path=MainWindowHeight,Mode=TwoWay}"
+        Width="{Binding Source={x:Static Settings:Ubiquitous.Default}, Path=MainWindowWidth,Mode=TwoWay}"
         Title="Ubiquitous 2.0"   
         Style="{DynamicResource MainWindowStyle}"
         xmlns:Interactivity="clr-namespace:UB.Interactivity"
