--- a/Ubiquitous2/View/SettingsWindow.xaml
+++ b/Ubiquitous2/View/SettingsWindow.xaml
@@ -18,7 +18,7 @@
     </Window.DataContext>
 
     <Grid>
-        <fluent:BackstageTabControl SelectedIndex="0" Background="#FF323232" Style="{DynamicResource SettingsStyle}">
+        <fluent:BackstageTabControl SelectedIndex="3" Background="#FF323232" Style="{DynamicResource SettingsStyle}">
             <fluent:BackstageTabItem Header="Chat">
                 <Grid>
                     <ItemsControl ItemsSource="{Binding Chats}"
@@ -65,20 +65,11 @@
                 <DockPanel>
                     <Grid>
                         <Label Content="Web server port" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.545,-0.4" FontWeight="Bold"/>
-                        <TextBox HorizontalAlignment="Left" Height="23" Margin="104,43,0,0" TextWrapping="Wrap" Text="{Binding Source={x:Static Settings:Ubiqiutous.Default}, Path=WebServerPort}" VerticalAlignment="Top" Width="43"/>
-                        <TextBlock TextWrapping="Wrap" Margin="10,19,10,234">Web server allow you to read the chat on any mobile device or another PC</TextBlock>
-                        <TextBlock TextWrapping="Wrap" Margin="10,71,10,10">
-                            <Bold>Usage:</Bold><LineBreak></LineBreak>
-                            1) Mobile device and PC with the chat must be connected to the same network (wifi,lan etc);<LineBreak/>
-                            2) To get emoticons work you have to have Internet on mobile device;<LineBreak/>
-                            2) Get LAN IP of PC you running chat on. Normally it starts with 192.168.<LineBreak/>
-                            3) On the mobile device open URL: http://your_ip:web_server_port<LineBreak/><LineBreak/>
-                            e.g, if IP is 192.168.0.5 and port is 8080 <LineBreak/>
-                            open: http://192.168.0.5:8080<LineBreak/>
-                            To open chat on the same PC go to: http://localhost:8080
-                            
-                             
-                        </TextBlock>
+                        <TextBox HorizontalAlignment="Left" Height="23" Margin="104,43,0,0" TextWrapping="Wrap" Text="{Binding WebServerPort}" VerticalAlignment="Top" Width="43"/>
+                        <TextBlock Height="16" Margin="157,46,0,0" VerticalAlignment="Top" HorizontalAlignment="Left"><Hyperlink Command="{Binding OpenLocalHost}"><TextBlock Text="{Binding LocalWebURL}"></TextBlock> </Hyperlink></TextBlock>
+
+                        <TextBlock TextWrapping="Wrap" Margin="10,10,10,234" VerticalAlignment="Top" HorizontalAlignment="Center">Web server allow you to read the chat on any mobile device or another PC</TextBlock>
+                        <TextBlock TextWrapping="Wrap" Margin="10,71,10,10"><Bold><Run Text="Usage:"/></Bold><LineBreak/><Run Text="1) Mobile device and PC with the chat must be connected to the same network (wifi,lan etc);"/><LineBreak/><Run Text="2) To get emoticons work you have to have Internet on mobile device;"/><LineBreak/><Run Text="2) Get LAN IP of PC you running chat on. Normally it starts with 192.168."/><LineBreak/><Run Text="3) On the mobile device open URL: http://your_ip:web_server_port"/><LineBreak/><LineBreak/><Run Text="e.g, if IP is 192.168.0.5 and port is 8080"/><LineBreak/><Run Text="open: http://192.168.0.5:8080"/><LineBreak/><Run Text="To open chat on the same PC go to: "/></TextBlock>
                     </Grid>
                 </DockPanel>
             </fluent:BackstageTabItem>
