--- a/Ubiquitous2/View/StatusWindow.xaml
+++ b/Ubiquitous2/View/StatusWindow.xaml
@@ -41,15 +41,15 @@
                     <DataTemplate>
                         <Grid MinWidth="32"  Margin="0" HorizontalAlignment="Center" VerticalAlignment="Center" Opacity="0.9">
                             <Grid.ToolTip>
-                                <ToolTip HasDropShadow="False" Placement="Top" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF5D5D5D">
-                                    <Border Padding="5" BorderThickness="1" BorderBrush="#FFFFBC2B" CornerRadius="10" Background="#CC000000">
+                                <ToolTip HasDropShadow="False" Placement="Top" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFCBCBCB">
+                                    <Border Padding="5" BorderThickness="1" BorderBrush="#FF707070" CornerRadius="10" Background="#CC000000">
                                         <ItemsControl Focusable="False" ItemsSource="{Binding Status.ToolTips}">
                                             <ItemsControl.ItemTemplate>
                                                 <DataTemplate>
                                                     <StackPanel Orientation="Horizontal">
                                                         <TextBlock Text="{Binding Header}"></TextBlock>
-                                                        <TextBlock> :</TextBlock>
-                                                        <TextBlock Text="{Binding Text}"/>
+                                                        <TextBlock Text=" : "> :</TextBlock>
+                                                        <TextBlock Text="{Binding Text}" Foreground="#FFFFBB2A"/>
                                                     </StackPanel>
                                                 </DataTemplate>
                                             </ItemsControl.ItemTemplate>
