--- a/Ubiquitous2/Skins/Simple/MainWindowSkin.xaml
+++ b/Ubiquitous2/Skins/Simple/MainWindowSkin.xaml
@@ -45,7 +45,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Window}">
-                    <Grid >
+                    <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="15" />
                             <RowDefinition Height="*" />
@@ -122,7 +122,7 @@
                                         </DockPanel>
                                     </Border>
                                     <View:ChatBoxView Focusable="False" Grid.Row="1" Margin="0,0,4,0" RenderTransformOrigin="1,0" OverridesDefaultStyle="True" Padding="0">
-                                        <MouseBinding Gesture="LeftClick" Command="{Binding ShowOverlay}"/>
+                                        <!--<MouseBinding Gesture="LeftClick" Command="{Binding ShowOverlay}"/>-->
                                     </View:ChatBoxView>
                                     <Border CornerRadius="0,0,10,10" Focusable="False" Grid.Row="2" Padding="24,0,5,0" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Panel.ZIndex="1" Visibility="{Binding IsOverlayVisible, Converter={StaticResource boolToVisibilityConverter}}" BorderBrush="#FF165B1D" BorderThickness="1" Margin="0" Height="36">
                                         <DockPanel Focusable="False" VerticalAlignment="Bottom" Background="Transparent" Margin="0">
