--- a/Ubiquitous2/Skins/Main/MainWindowSkin.xaml
+++ b/Ubiquitous2/Skins/Main/MainWindowSkin.xaml
@@ -121,9 +121,8 @@
 
                                         </DockPanel>
                                     </Border>
-                                    <View:ChatBoxView Focusable="False" Grid.Row="1" Margin="0,0,4,0" RenderTransformOrigin="1,0" OverridesDefaultStyle="True" Padding="0">
-                                        <MouseBinding Gesture="LeftClick" Command="{Binding ShowOverlay}"/>
-                                    </View:ChatBoxView>
+                                    <View:ChatBoxView Focusable="False" Grid.Row="1" Margin="0,0,4,0" RenderTransformOrigin="1,0" OverridesDefaultStyle="True" Padding="0"/>
+
                                     <Border CornerRadius="0,0,10,10" Focusable="False" Grid.Row="2" Padding="24,0,5,0" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Panel.ZIndex="1" Visibility="{Binding IsOverlayVisible, Converter={StaticResource boolToVisibilityConverter}}" BorderBrush="#FF165B1D" BorderThickness="1" Margin="0" Height="36">
                                         <DockPanel Focusable="False" VerticalAlignment="Bottom" Background="Transparent" Margin="0">
                                             <ComboBox Focusable="False" Style="{DynamicResource ReplyComboStyle}" Name="replyCombo" ItemsSource="{Binding ChannelList}" SelectedItem="{Binding SelectedChatChannel}" ItemTemplate="{DynamicResource ReplyComboTemplate}" IsReadOnly="True" IsEditable="False" Margin="-18,1,61,6" VerticalAlignment="Stretch"/>
