--- a/Ubiquitous2/View/MusicTickerWindow.xaml
+++ b/Ubiquitous2/View/MusicTickerWindow.xaml
@@ -52,7 +52,7 @@
                     <GradientStop Color="#FF4D4D4D" Offset="0.184"/>
                 </RadialGradientBrush>
             </DockPanel.Background>
-            <Image Margin="5" Width="64" Source="{Binding CurrentTrack.ImageURL}" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <Image Margin="5" Width="64" Source="{Binding CurrentTrack.ImageURL}" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         </DockPanel>
 
         <StackPanel Margin="5" Grid.Row="0" Grid.Column="1">
