--- a/Ubiquitous2/View/MusicTickerWindow.xaml
+++ b/Ubiquitous2/View/MusicTickerWindow.xaml
@@ -16,7 +16,7 @@
         AllowsTransparency="True"        
         ResizeMode="NoResize"
         Background="#FF3E3E42"
-        Title="Ubiquitous 2.0 - Music ticker"
+        Title="Music ticker"
         Topmost="True"
         Icon="..\ubiquitous smile.ico"
         DataContext="{Binding Source={StaticResource Locator},Path=MusicTicker}" 
