--- a/Ubiquitous2/View/SettingSectionView.xaml
+++ b/Ubiquitous2/View/SettingSectionView.xaml
@@ -26,7 +26,7 @@
         <BooleanToVisibilityConverter x:Key="boolToVisibilityConverter"></BooleanToVisibilityConverter>
     </UserControl.Resources>
     <Grid>
-        <Border BorderThickness="0,1,0,0" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" HorizontalAlignment="Left">
+        <Border BorderThickness="0,1,0,0" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
             <Border.BorderBrush>
                 <LinearGradientBrush EndPoint="1,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFC5C5C5" Offset="0"/>
@@ -54,7 +54,7 @@
                       ScrollViewer.VerticalScrollBarVisibility="Auto" Background="#FF494949">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
-                            <Devart:SmoothPanel TrackTopMost="False" Width="300" HorizontalAlignment="Left" Height="{Binding CalculatedHeight}" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
+                            <Devart:SmoothPanel TrackTopMost="False" HorizontalAlignment="Stretch" Height="{Binding CalculatedHeight}" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
                                 <Devart:SmoothPanel.Templates>
                                     <Devart:SmoothPanelTemplate ViewModel="{x:Type ViewModel:SettingsFieldViewModel}" View="{x:Type View:SettingsFieldView}" />
                                 </Devart:SmoothPanel.Templates>
