--- a/Ubiquitous2/web/css/ubiquitous.css
+++ b/Ubiquitous2/web/css/ubiquitous.css
@@ -49,8 +49,14 @@
 }
 /*Timestamp*/
 .ts{
-	display:none;
-	font-size:xx-small;
+	color:#D69B33;
+	display:block;
+	float:right;
+	margin-top:-6px;
+	margin-right:5px;
+	margin-left:5px;
+    position:relative;
+	font-size:8pt;
 }
 
 /*Username*/
