--- a/Ubiquitous2/View/MusicTickerWindow.xaml
+++ b/Ubiquitous2/View/MusicTickerWindow.xaml
@@ -26,8 +26,9 @@
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="boolToVisibilityConverter"></BooleanToVisibilityConverter>
     </Window.Resources>
-
+    
     <i:Interaction.Behaviors>
+        <Interactivity:WindowPersistentLocationBehavior WindowName="MusicTickerWindow"/>
         <Interactivity:DragWindow/>
     </i:Interaction.Behaviors>
 
